--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
-    <script src="index.html" defer></script>
+    <script src="index.js" defer></script>
     <title>Flappy bird</title>
 </head>
 <body>
-    <div id="gameID">
-        
+    <div id="gameID" onclick="jump()">
         <div id="block"></div>
 
         <div id="hole"></div>
